tests/baselines/reference/shadowingViaLocalValue.errors.txt
tests/cases/compiler/shadowingViaLocalValue.ts(4,13): error TS2481: Cannot initialize outer scoped variable 'x' in the same scope as block scoped declaration 'x'.
tests/cases/compiler/shadowingViaLocalValue.ts(11,18): error TS2481: Cannot initialize outer scoped variable 'x1' in the same scope as block scoped declaration 'x1'.


==== tests/cases/compiler/shadowingViaLocalValue.ts (2 errors) ====
    {
        let x;
        {
            var x = 1;
                ~
!!! error TS2481: Cannot initialize outer scoped variable 'x' in the same scope as block scoped declaration 'x'.
        }
    }
    
    {
        let x1;
        {
            for (var x1 = 0; ;);
                     ~~
!!! error TS2481: Cannot initialize outer scoped variable 'x1' in the same scope as block scoped declaration 'x1'.
        }
    }
    
    